--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio-rustls"] }
+sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
 tokio = { version = "1.39.2", features = ["full"] }
 
 [dependencies.bdk_wallet]
