--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.86"
 sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
+thiserror = "1"
 tokio = { version = "1.39.2", features = ["full"] }
 
 [dependencies.bdk_wallet]
