--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,15 @@ name = "async_wallet_bdk_sqlx"
 path = "src/main.rs"
 
 [dependencies]
-sqlx = { version = "0.8.0", default-features = false, features = ["runtime-tokio-rustls","derive", "postgres", "json", "chrono", "uuid", "sqlx-macros", "migrate"] }
+sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls","derive", "postgres", "json", "chrono", "uuid", "sqlx-macros", "migrate"] }
 thiserror = "1"
 tokio = { version = "1.39.2", features = ["full"] }
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.125"
+better-panic = "0.3.0"
 
 [dependencies.bdk_wallet]
-#path = "../bdk/crates/wallet"
-git = "https://github.com/evanlinjin/bdk"
+path = "../evan3/crates/wallet"
+#git = "https://github.com/evanlinjin/bdk"
 #branch = "simplify_wallet_persistence"
-rev = "f434c93a788c6334319c40de7fe961113b9e415f"
+#rev = "f434c93a788c6334319c40de7fe961113b9e415f"
