--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde_json
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-bdk_electrum = { version = "0.19.0"}
-bdk_testenv = { version = "0.10.0" }
-better-panic = "0.3.0"
+anyhow = "1.0.89"
