--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,9 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde_json
 [dev-dependencies]
 assert_matches = "1.5.0"
 anyhow = "1.0.89"
+bdk_electrum = { version = "0.19.0"}
+rustls = "0.23.14"
+
+[[example]]
+name = "bdk_sqlx_postgres"
+path = "examples/bdk_sqlx_postgres.rs"
