--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bdk_wallet = { version = "1.0.0-beta.5" }
+bdk_wallet = { version = "1.0.0", features = ["test-utils"] }
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.125"
 sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio", "tls-rustls-ring","derive", "postgres", "sqlite", "json", "chrono", "uuid", "sqlx-macros", "migrate"] }
@@ -16,7 +16,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde_json
 [dev-dependencies]
 assert_matches = "1.5.0"
 anyhow = "1.0.89"
-bdk_electrum = { version = "0.19.0"}
+bdk_electrum = { version = "0.20.1"}
 rustls = "0.23.14"
 
 [[example]]
